--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -17,10 +17,8 @@ jobs:
       BUILDKIT_INLINE_CACHE: 1
     steps:
       - uses: actions/checkout@v2
-      - name: run functional tests
-        run: npm run container-test-functional
-      - name: run e2e tests
-        run: npm run container-test-e2e
+      - shell: bash
+        run: make test
   setup-deployment:
     name: prepare deployment
     runs-on: ubuntu-latest
