--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,6 @@ permissions:
   statuses: write
 jobs:
   test:
-    name: run tests
     runs-on: ubuntu-latest
     env:
       DOCKER_BUILDKIT: 1
@@ -37,7 +36,7 @@ jobs:
               "production_environment": true,
               "auto_merge": false,
               "environment": "production",
-              "required_contexts": ["run tests"]
+              "required_contexts": ["test"]
             }}', github.ref) }}
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
