Fixing PR deploy ref.

--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -71,7 +71,8 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: checkout to access composite action
         uses: actions/checkout@v2
-        ref: ${{ needs.get-ref.outputs.ref }}
+        with:
+          ref: ${{ needs.get-ref.outputs.ref }}
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
       - name: delete from Kubernetes
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
@@ -166,7 +167,8 @@ jobs:
       ref: ${{ needs.setup-deployment.outputs.ref }}
     steps:
       - uses: actions/checkout@v2
-        ref: ${{ needs.setup-deployment.outputs.ref }}
+        with:
+          ref: ${{ needs.setup-deployment.outputs.ref }}
       - uses: ./.github/workflows/actions/ecr-push
         with:
           aws-region: ${{ secrets.AWS_REGION }}
@@ -182,7 +184,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        ref: ${{ needs.push.outputs.ref }}
+        with:
+          ref: ${{ needs.push.outputs.ref }}
       - uses: ./.github/workflows/actions/kubernetes
         id: deploy-to-kubernetes
         with:
