Fixing image name in deploy workflow.

--- a/.github/workflows/actions/kube-deploy/action.yaml
+++ b/.github/workflows/actions/kube-deploy/action.yaml
@@ -59,8 +59,8 @@ runs:
           ${{
               format(
                 '{0}/{1}:{2}',
-                inputs.ecr-repo-name,
                 steps.ecr-login.outputs.registry,
+                inputs.ecr-repo-name,
                 inputs.image-tag
               )
           }}
@@ -70,7 +70,7 @@ runs:
         kustomize edit set label "app:$APP"
         kustomize edit set image app-image="$IMAGE_REF"
         [[ ! -z $NAME_SUFFIX ]] && kustomzie edit set namesuffix -- "$NAME_SUFFIX"
-        kustomize build -o ./_resolved.yaml
+        kustomize build -o "$RUNNER_TEMP/_resolved.yaml"
     - name: get kubeconfig from eks
       env:
         AWS_EKS_CLUSTER: ${{ inputs.aws-eks-cluster }}
@@ -84,7 +84,7 @@ runs:
         APP: ${{ inputs.app-name }}
       shell: bash
       run: |
-        kubectl apply -f ./manifests/_resolved.yaml
+        kubectl apply -f "$RUNNER_TEMP/_resolved.yaml"
         kubectl rollout status "deployment/$APP"
         export SVC_URL="$(kubectl get svc $APP -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
         echo "::set-output name=url::$SVC_URL"
@@ -94,4 +94,4 @@ runs:
         APP: ${{ inputs.app-name }}
       shell: bash
       run: |
-        kubectl delete -f ./manifests/_resolved.yaml
+        kubectl delete -f "$RUNNER_TEMP/_resolved.yaml"
