--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: quotable
-          image: app-image:latest # keep this value, it gets replaced by kustomize
+          image: app-image
           ports:
             - containerPort: 3000
