Removing multiline format for image ref.

--- a/.github/workflows/actions/kube-deploy/action.yaml
+++ b/.github/workflows/actions/kube-deploy/action.yaml
@@ -55,13 +55,7 @@ runs:
       env:
         APP: ${{ inputs.app-name }}
         NAME_SUFFIX: ${{ inputs.name-suffix }}
-        IMAGE_REF: |
-          ${{
-              format('{0}/{1}:{2}',
-                steps.ecr-login.outputs.registry,
-                inputs.ecr-repo-name,
-                inputs.image-tag)
-          }}
+        IMAGE_REF: ${{ format('{0}/{1}:{2}', steps.ecr-login.outputs.registry, inputs.ecr-repo-name, inputs.image-tag) }}
       shell: bash
       run: |
         cd ./manifests
