--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -10,18 +10,18 @@ permissions:
   statuses: write
   pull-requests: write
 jobs:
-  get-ref:
+  get-sha:
     runs-on: ubuntu-latest
     outputs:
-      ref: ${{ steps.get-ref-from-pr.outputs.ref || steps.get-ref-from-issue.outputs.ref }}
+      sha: ${{ steps.get-sha-from-pr.outputs.sha || steps.get-sha-from-issue.outputs.sha }}
     steps:
-      - name: get ref from pr
-        id: get-ref-from-pr
+      - name: get sha from pr
+        id: get-sha-from-pr
         if: github.event_name == 'pull_request'
         env:
-          REF: ${{ github.head_ref }}
+          SHA: ${{ github.sha }}
         shell: bash
-        run: echo "::set-output name=ref::$REF"
+        run: echo "::set-output name=sha::$SHA"
       - name: get issue from comment
         id: get-issue
         if: github.event_name == 'issue_comment'
@@ -32,18 +32,18 @@ jobs:
           issue_id: ${{ github.event.issue.number }}
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - name: get ref from pr issue
-        id: get-ref-from-issue
+      - name: get sha from pr issue
+        id: get-sha-from-issue
         if: github.event_name == 'issue_comment'
         shell: bash
         env:
           DATA: ${{ steps.get-issue.outputs.data }}
         run: |
-          export REF=$(echo $DATA | jq '.head.ref')
-          echo "::set-output name=ref::$REF"
+          export SHA=$(echo $DATA | jq '.head.sha')
+          echo "::set-output name=sha::$SHA"
 
   evict-inactive:
-    needs: [get-ref]
+    needs: [get-sha]
     name: evict previous deployment
     runs-on: ubuntu-latest
     steps:
@@ -53,7 +53,7 @@ jobs:
         with:
           route: GET /repos/:repository/deployments
           repository: ${{ github.repository }}
-          ref: ${{ needs.get-ref.outputs.ref }}
+          sha: ${{ needs.get-sha.outputs.sha }}
           environment: development
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
@@ -72,7 +72,7 @@ jobs:
       - name: checkout to access composite action
         uses: actions/checkout@v2
         with:
-          ref: ${{ needs.get-ref.outputs.ref }}
+          sha: ${{ needs.get-sha.outputs.sha }}
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
       - name: delete from Kubernetes
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
@@ -84,8 +84,8 @@ jobs:
           aws-eks-cluster: ${{ secrets.AWS_EKS_CLUSTER }}
           app-name: ${{ format('{0}-dev-pr-{1}', secrets.APP, github.event.number) }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
-          image-tag: ${{ github.sha }}
           name-suffix: ${{ format('-dev-pr-{0}', github.event.number) }}
+          sha: ${{ github.event.pull_request.head.sha }}
           delete: true
   deploy-check:
     needs: [evict-inactive]
@@ -119,11 +119,11 @@ jobs:
     needs: [deploy-check]
     outputs:
       deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
-      ref: ${{ fromJson(steps.get_pull_request_ref.outputs.data).head.ref }}
+      sha: ${{ fromJson(steps.get_pull_request.outputs.data).head.sha }}
     if: needs.deploy-check.outputs.triggered == 'true'
     steps:
-      - name: get pull request ref
-        id: get_pull_request_ref
+      - name: get pull request sha
+        id: get_pull_request
         uses: octokit/request-action@v2.x
         with:
           route: GET /repos/:repository/pulls/:issue_id
@@ -137,12 +137,12 @@ jobs:
         env:
           REQUEST_BODY: |
             ${{ format('{{
-              "ref": "{0}",
+              "sha": "{0}",
               "transient_environment": true,
               "auto_merge": false,
               "environment": "development",
               "required_contexts": ["test"]
-            }}', fromJson(steps.get_pull_request_ref.outputs.data).head.ref) }}
+            }}', fromJson(steps.get_pull_request.outputs.data).head.sha) }}
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           route: POST /repos/:repository/deployments
@@ -165,12 +165,14 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       deployment: ${{ needs.setup-deployment.outputs.deployment }}
-      ref: ${{ needs.setup-deployment.outputs.ref }}
+      sha: ${{ needs.setup-deployment.outputs.sha }}
+      image-digest: ${{ steps.ecr-push.outputs.image-digest }}
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ needs.setup-deployment.outputs.ref }}
+          sha: ${{ needs.setup-deployment.outputs.sha }}
       - uses: ./.github/workflows/actions/ecr-push
+        id: ecr-push
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           aws-role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
@@ -178,6 +180,7 @@ jobs:
           ecr-repo-name: ${{ secrets.ECR_REPO }}
           build-target: app
           image-tag: ${{ format('dev-pr-{0}', github.event.issue.number) }}
+          sha: ${{ needs.setup-deployment.outputs.sha }}
           name-suffix: ${{ format('-dev-pr-{0}', github.event.issue.number) }}
   kubernetes:
     name: deploy to Kubernetes
@@ -186,7 +189,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ needs.push.outputs.ref }}
+          sha: ${{ needs.push.outputs.sha }}
       - uses: ./.github/workflows/actions/kube-deploy
         id: deploy-to-kubernetes
         with:
@@ -198,7 +201,8 @@ jobs:
           app-name: ${{ format('{0}-dev-pr-{1}', secrets.APP, github.event.issue.number) }}
           image-tag: ${{ format('dev-pr-{0}', github.event.issue.number) }}
           name-suffix: ${{ format('-dev-pr-{0}', github.event.issue.number) }}
-          ref: ${{ needs.push.outputs.ref }}
+          sha: ${{ needs.push.outputs.sha }}
+          image-digest: ${{ needs.push.outputs.image-digest }}
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
