--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -74,13 +74,17 @@ jobs:
         with:
           sha: ${{ needs.get-sha.outputs.sha }}
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
+      - name: configure AWS credentials
+        id: configure-aws
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
       - name: delete from Kubernetes
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
         uses: ./.github/workflows/actions/kube-deploy
         with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          aws-role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
-          aws-role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
           aws-eks-cluster: ${{ secrets.AWS_EKS_CLUSTER }}
           app-name: ${{ format('{0}-dev-pr-{1}', secrets.APP, github.event.number) }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
@@ -171,12 +175,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           sha: ${{ needs.setup-deployment.outputs.sha }}
+      - name: configure AWS credentials
+        id: configure-aws
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
       - uses: ./.github/workflows/actions/ecr-push
         id: ecr-push
         with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          aws-role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
-          aws-role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
           build-target: app
           image-tag: ${{ format('dev-pr-{0}', github.event.issue.number) }}
@@ -190,12 +198,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           sha: ${{ needs.push.outputs.sha }}
+      - name: configure AWS credentials
+        id: configure-aws
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
       - uses: ./.github/workflows/actions/kube-deploy
         id: deploy-to-kubernetes
         with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          aws-role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
-          aws-role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
           aws-eks-cluster: ${{ secrets.AWS_EKS_CLUSTER }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
           app-name: ${{ format('{0}-dev-pr-{1}', secrets.APP, github.event.issue.number) }}
