More debug info, why isn't this working.

--- a/.github/workflows/actions/ecr-push/action.yaml
+++ b/.github/workflows/actions/ecr-push/action.yaml
@@ -39,7 +39,7 @@ runs:
         FULL_IMAGE="$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
         FULL_IMAGE_SHA="$ECR_REGISTRY/$ECR_REPO:$SHA"
         docker build --target="$BUILD_TARGET" --tag="$FULL_IMAGE" --tag="$FULL_IMAGE_SHA" . && \
-        docker image inspect "$FULL_IMAGE" -f '{{.Id}}' && \
+        echo "image digest: $(docker image inspect $FULL_IMAGE -f '{{.Id}}')" && \
         IMAGE_DIGEST=$(docker image inspect "$FULL_IMAGE" -f '{{.Id}}') && \
         docker push --all-tags "$ECR_REGISTRY/$ECR_REPO" && \
         echo "::set-output name=image-digest::$IMAGE_DIGEST"
