Oh no... forgot a .outputs. :|

--- a/.github/workflows/actions/ecr-push/action.yaml
+++ b/.github/workflows/actions/ecr-push/action.yaml
@@ -16,7 +16,7 @@ inputs:
     default: app
 outputs:
   image-digest:
-    value: ${{ steps.push-image.image-digest }}
+    value: ${{ steps.push-image.outputs.image-digest }}
 runs:
   using: composite
   steps:
@@ -39,7 +39,6 @@ runs:
         FULL_IMAGE="$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
         FULL_IMAGE_SHA="$ECR_REGISTRY/$ECR_REPO:$SHA"
         docker build --target="$BUILD_TARGET" --tag="$FULL_IMAGE" --tag="$FULL_IMAGE_SHA" . && \
-        echo "image digest: $(docker image inspect $FULL_IMAGE -f '{{.Id}}')" && \
-        IMAGE_DIGEST=$(docker image inspect "$FULL_IMAGE" -f '{{.Id}}') && \
         docker push --all-tags "$ECR_REGISTRY/$ECR_REPO" && \
+        IMAGE_DIGEST=$(docker image inspect "$FULL_IMAGE" -f '{{.Id}}') && \
         echo "::set-output name=image-digest::$IMAGE_DIGEST"
