--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,12 +17,10 @@ jobs:
       - uses: actions/checkout@v2
       - shell: bash
         run: make test
-  setup-deployment:
+  deploy:
     name: prepare deployment
     runs-on: ubuntu-latest
     needs: [test]
-    outputs:
-      deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
     steps:
       - name: create deployment
         id: create_deployment
@@ -53,14 +51,6 @@ jobs:
           state: in_progress
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-  push:
-    name: build and push to ECR
-    needs: [setup-deployment]
-    outputs:
-      deployment: ${{ needs.setup-deployment.outputs.deployment }}
-      image-ref: ${{ steps.ecr-push.outputs.image-ref }}
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/checkout@v2
         with:
           sha: ${{ github.sha }}
@@ -78,35 +68,20 @@ jobs:
           build-target: app
           image-tag: production
           sha: ${{ github.sha }}
-  kubernetes:
-    name: deploy to Kubernetes
-    needs: [push]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          sha: ${{ github.sha }}
-      - name: configure AWS credentials
-        id: configure-aws
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
-          role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
       - id: deploy-to-kubernetes
         uses: ./.github/workflows/actions/kube-deploy
         with:
           aws-eks-cluster: ${{ secrets.AWS_EKS_CLUSTER }}
           app-name: ${{ secrets.APP }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
-          image-ref: ${{ needs.push.outputs.image-ref }}
+          image-ref: ${{ steps.ecr-push.outputs.image-ref }}
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ needs.push.outputs.deployment }}
+          deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
           environment_url: ${{ format('http://{0}', steps.deploy-to-kubernetes.outputs.url) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
@@ -119,7 +94,7 @@ jobs:
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ needs.kubernetes.outputs.deployment }}
+          deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: failure
         env:
