Fixing POST body for creating a deployment.

--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -140,7 +140,7 @@ jobs:
         env:
           REQUEST_BODY: |
             ${{ format('{{
-              "sha": "{0}",
+              "ref": "{0}",
               "transient_environment": true,
               "auto_merge": false,
               "environment": "development",
