Fixing pr deploy to use 'ref' name instead of 'sha' on deployment fetch.

--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -52,7 +52,7 @@ jobs:
         with:
           route: GET /repos/:repository/deployments
           repository: ${{ github.repository }}
-          sha: ${{ steps.get-final-sha.outputs.sha }}
+          ref: ${{ steps.get-final-sha.outputs.sha }}
           environment: development
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
