--- a/.github/workflows/actions/kube-deploy/action.yaml
+++ b/.github/workflows/actions/kube-deploy/action.yaml
@@ -34,7 +34,7 @@ runs:
       run: |
         cd ./manifests
         kustomize edit set label "app:$APP"
-        kustomize edit set image app-image="$IMAGE_REF"
+        [[ ! -z $IMAGE_REF ]] && kustomize edit set image app-image="$IMAGE_REF"
         [[ ! -z $NAME_SUFFIX ]] && kustomize edit set namesuffix -- "$NAME_SUFFIX"
         kustomize build -o "$RUNNER_TEMP/_resolved.yaml"
     - name: get kubeconfig from eks
