--- a/.github/workflows/deploy-pr.yaml
+++ b/.github/workflows/deploy-pr.yaml
@@ -14,13 +14,16 @@ jobs:
     name: evict previous deployment
     runs-on: ubuntu-latest
     steps:
-      - name: get sha from pr
-        id: get-sha-from-pr
+      - name: get data from pr
+        id: get-data-from-pr
         if: github.event_name == 'pull_request'
         env:
           SHA: ${{ github.event.pull_request.head.sha }}
+          REF: ${{ github.event.pull_request.head.ref }}
         shell: bash
-        run: echo "::set-output name=sha::$SHA"
+        run: |
+          echo "::set-output name=sha::$SHA"
+          echo "::set-output name=ref::$REF"
       - name: get issue from comment
         id: get-issue
         if: github.event_name == 'issue_comment'
@@ -31,28 +34,33 @@ jobs:
           issue_id: ${{ github.event.issue.number }}
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - name: get sha from pr issue
-        id: get-sha-from-issue
+      - name: get data from pr issue
+        id: get-data-from-issue
         if: github.event_name == 'issue_comment'
         shell: bash
         env:
           DATA: ${{ steps.get-issue.outputs.data }}
         run: |
-          export SHA=$(echo $DATA | jq '.head.sha')
+          SHA=$(echo $DATA | jq '.head.sha')
+          REF=$(echo $DATA | jq '.head.ref')
           echo "::set-output name=sha::$SHA"
-      - name: get final sha
-        id: get-final-sha
+          echo "::set-output name=ref::$REF"
+      - name: get final data
+        id: get-final-data
         env:
-          SHA: ${{ steps.get-sha-from-pr.outputs.sha || steps.get-sha-from-issue.outputs.sha }}
+          SHA: ${{ steps.get-data-from-pr.outputs.sha || steps.get-data-from-issue.outputs.sha }}
+          REF: ${{ steps.get-data-from-pr.outputs.ref || steps.get-data-from-issue.outputs.ref }}
         shell: bash
-        run: echo "::set-output name=sha::$SHA"
+        run: |
+          echo "::set-output name=sha::$SHA"
+          echo "::set-output name=ref::$REF"
       - name: check for previous deployment
         id: check-previous
         uses: octokit/request-action@v2.x
         with:
           route: GET /repos/:repository/deployments
           repository: ${{ github.repository }}
-          sha: ${{ steps.get-final-sha.outputs.sha }}
+          ref: ${{ steps.get-final-data.outputs.ref }}
           environment: development
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
@@ -71,7 +79,7 @@ jobs:
       - name: checkout to access composite action
         uses: actions/checkout@v2
         with:
-          sha: ${{ steps.get-final-sha.outputs.sha }}
+          sha: ${{ steps.get-final-data.outputs.sha }}
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) != '[]' && github.event_name == 'pull_request' }}
       - name: configure AWS credentials
         id: configure-aws
